added blog post feature, with markdown funconality and implemented CRUD for blog post

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -24,7 +24,9 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/clean-blog.min.css' %}" rel="stylesheet">
-
+    {% block scriptsrc %}
+    {% endblock scriptsrc %}
+    
     {% block style %}
     {% endblock style %}
 
