--- a/register/templates/login/nav.html
+++ b/register/templates/login/nav.html
@@ -10,7 +10,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog_new' %}">New post</a>
+            </li>
+        {% endif %}
           {% if user.is_authenticated %}
               <li class="nav-item">
                   <a class="nav-link" href="{% url 'logout' %}">Logout</a>
@@ -25,13 +29,10 @@
                 <a class="nav-link" href="{% url 'about_us' %}">About</a>
             </li>
           {% if user.is_authenticated %}
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'blog_post' %}">{{request.user}}</a>
-              </li>
-          {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog_post' %}">Sample Post</a>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'blog_new' %}">{{request.user}}</a>
             </li>
+            {% else %}
           {% endif %}
           
     <li class=" nav-item">
