--- a/webapp/blog/templates/blog/about.html
+++ b/webapp/blog/templates/blog/about.html
@@ -1,6 +1,11 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 
+{% block scriptsrc %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.7/jqBootstrapValidation.min.js" crossorigin="anonymous"></script>
+{% endblock scriptsrc %}
+
+
 {% block content %}
   {% include "blog/nav.html" %}
   <!-- Page Header -->
@@ -85,7 +90,6 @@
 
 {% block scripts %}
   <!-- Contact Form JavaScript -->
-  <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
   <script src="{% static 'js/contact_me.js' %}"></script>
 
 {% endblock scripts %}
