--- a/webapp/register/templates/login/login.html
+++ b/webapp/register/templates/login/login.html
@@ -6,6 +6,10 @@
 
 {% load static %}
 
+{% block scriptsrc %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.7/jqBootstrapValidation.min.js" crossorigin="anonymous"></script>
+{% endblock scriptsrc %}
+
 {% block content %}
 
 {% include "login/nav.html" %}
@@ -55,7 +59,6 @@
 
 
 {% block scripts %}
-<script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
 
 <script>
   navBrand = document.getElementsByClassName('navbar-brand')
