--- a/webapp/register/templates/register/index.html
+++ b/webapp/register/templates/register/index.html
@@ -1,6 +1,10 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 
+{% block scriptsrc %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.7/jqBootstrapValidation.min.js" crossorigin="anonymous"></script>
+{% endblock scriptsrc %}
+
 {% block content %}
 
 {% include "blog/nav.html" %}
@@ -120,8 +124,6 @@
 
 
 {% block scripts %}
-<script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-
 <script>
   navBrand = document.getElementsByClassName('navbar-brand')
   navBrand[0].style.color = 'light  '
