--- a/webapp/register/templates/login/login.html
+++ b/webapp/register/templates/login/login.html
@@ -21,7 +21,12 @@
         <form name="login" id="login" method="POST">
           {% csrf_token %}
           {% for message in messages %}
-              <div class="alert alert-warning" role="alert">{{message}}</div>
+              <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{message}}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
           {% endfor %}
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
