--- a/webapp/register/templates/profile/delete.html
+++ b/webapp/register/templates/profile/delete.html
@@ -7,27 +7,27 @@
 <br><br><hr>
 <div class="container">
   <div class="row">
-    <div class="col-lg-8 col-md-10 mx-auto">
-      
-      <h1>{{object.title}}</h1>
+    <div class="col-lg-8 col-md-10 mx-auto p-5">
+      <h1>Delete Account:</h1>
+      <br>
       <h3>
-        {{object.description}}
+        WARNING:
+        <hr>
+        From this action you will permenantly remove all
+        your data related to your account !
       </h3>
-      <span class="meta">Posted by
-        <a href="{% url 'user_profile' object.author %}""><b>{{object.author}}</b></a>
-        on , {{object.datePosted | date:"d M Y"}}
-      </span>
-      <br>
-      <br>
       <form action="" method="post">
-        {% csrf_token %}
-        <p>
-          Are you shure you want to delete this article ?
+          {% csrf_token %}
+        <p style="color: rgba(197, 25, 25, 0.705);">
+          <b>
+            Are you shure you want to delete your Account ?
+          </b>
         </p>
         <input class="btn btn-danger" type="submit" value="Yes, Delete">
-        <a class="btn btn-primary" href="{% url 'blog_post' object.id %}">Go Back</a>
+        <a class="btn btn-primary" href="{% url 'user_profile' user.username %}">Go Back</a>
       </form>
     </div>
+    <hr>
   </div>
   <br>
   <hr>
