--- a/webapp/blog/templates/blog/post_form.html
+++ b/webapp/blog/templates/blog/post_form.html
@@ -19,6 +19,26 @@
 {% include "blog/nav.html" %}
 <div class="container-fluid">
   <br><br><br>
+  {% if form.errors %}
+    <div>
+      <div class="container-fluid">
+        {% for field in form %}
+            {% for error in field.errors %}
+                <div class="alert alert-info">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endfor %}
+        {% for error in form.non_field_errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
+        <hr>
+      </div>
+      <br>
+    </div> 
+  {% endif %}
   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group floating-label-form-group controls">
