--- a/webapp/blog/templates/blog/post.html
+++ b/webapp/blog/templates/blog/post.html
@@ -12,20 +12,21 @@
 {% include "blog/nav.html" %}
 <!-- Page Header -->
 {% if object.image %}
-  {% thumbnail object.image "1080x540" as bg %}
-    <header class="masthead" style="background-image: url('{{bg.url}}')">
+{% thumbnail object.image "1080x540" as bg %}
+  <header class="masthead" style="background-image: url('{{bg.url}}')">
   {% endthumbnail %}
 {% else %}
   <header class="masthead">
 {% endif %}
-  <div class="container">
+<div class="container">
+  <div class="overlay"></div>
     <div class="row">
       <div class="col-lg-10 col-md-auto mx-auto">
         <!--start-->
         <div class="post-heading">
           <!-- Title -->
           <h1>
-            <p>
+            <p class="m-0">
               <span class="title">
                 {{object.title}}
               </span>
@@ -41,19 +42,26 @@
             </p>
           </h3>
           <!-- Posted by -->
-          <span class="author font-italic">Posted by
+          <span class="author font-italic rounded p-1">Posted by
             <a href="{% url 'user_profile' object.author %}">
               <u>{{object.author}}</u>
             </a>
             , {{object.datePosted | date:"d M Y"}}
           </span>
-          {% if object.author == user %}
-            <br>
-            <br>
-            <span>
-              <a href="{% url 'blog_edit' object.id %}" class="btn btn-info">Edit</a> ||
-              <a href="{% url 'blog_delete' object.id %}" class="btn btn-danger">Delete</a>
+          <hr>
+          {% for tags in object.tags.all %}
+            <span class="rounded bg-dark p-1 m-1" style="font-family: Lato;">
+              #{{tags}}
             </span>
+          {% endfor %}
+
+          {% if object.author == user %}
+            <p>
+              <span>
+                <a href="{% url 'blog_edit' object.id %}" class="btn btn-info">Edit</a> ||
+                <a href="{% url 'blog_delete' object.id %}" class="btn btn-danger">Delete</a>
+              </span>
+            </p>
           {% endif %}
         </div>
         <!--done-->
