moved html templates dir wise

--- a/webapp/blog/templates/blog/about.html
+++ b/webapp/blog/templates/blog/about.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-{% include "blog/endFooter.html" %}
+{% include "blog/footer/endFooter.html" %}
 {% endblock content %}
 
 {% block scripts %}
