--- a/webapp/blog/templates/blog/post/post.html
+++ b/webapp/blog/templates/blog/post/post.html
@@ -82,7 +82,7 @@
 
 <hr>
 
-{% include "blog/recentPostFooter.html" %}
-{% include "blog/endFooter.html" %}
+{% include "blog/footer/recentPostFooter.html" %}
+{% include "blog/footer/endFooter.html" %}
 
 {% endblock content %}
