--- a/webapp/blog/templates/blog/post/post_confirm_delete.html
+++ b/webapp/blog/templates/blog/post/post_confirm_delete.html
@@ -31,7 +31,7 @@
   </div>
   <br>
   <hr>
-  {% include "blog/endFooter.html" %}
+  {% include "blog/footer/endFooter.html" %}
 </div>
 
 {% block script %}
