--- a/webapp/register/templates/profile/delete.html
+++ b/webapp/register/templates/profile/delete.html
@@ -31,7 +31,7 @@
   </div>
   <br>
   <hr>
-  {% include "blog/endFooter.html" %}
+  {% include "blog/footer/endFooter.html" %}
 </div>
 
 {% block script %}
