--- a/webapp/blog/templates/blog/index.html
+++ b/webapp/blog/templates/blog/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% include "blog/nav.html" %}
 <!-- Page Header -->
-<header class="masthead" style="background-image: url( '/static/img/home-bg.jpg' )">
+<header class="masthead" style="background-image: url({% static '/img/home-bg.jpg' %})">
   <div class="overlay"></div>
     <div class="container">
       <div class="row">
