--- a/webapp/blog/templates/blog/post/post_form.html
+++ b/webapp/blog/templates/blog/post/post_form.html
@@ -20,33 +20,21 @@
 {% include "blog/nav.html" %}
 <div class="container-fluid">
   <br><br><br>
-  {% if form.errors %}
-    <div>
-      <div class="container-fluid">
-        {% for field in form %}
-            {% for error in field.errors %}
-                <div class="alert alert-info">
-                    <strong>{{ error|escape }}</strong>
-                </div>
-            {% endfor %}
-        {% endfor %}
-        {% for error in form.non_field_errors %}
-            <div class="alert alert-danger">
-                <strong>{{ error|escape }}</strong>
-            </div>
-        {% endfor %}
-        <hr>
-      </div>
-      <br>
-    </div> 
-  {% endif %}
+
+  {% include 'form_errors_display.html' %}
+
+
   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group floating-label-form-group controls">
-    <b> Image:</b>
-    {% render_field form.image placeholder="Image" class="form-control" %}
+      <b> Image Upload:</b>
+      {% render_field form.image placeholder="Image" style="width: 300px;margin: 0px" %}
+      <br>
+      <b>Or</b>
+      <br>
+      <b> Image Url:</b>
+      {% render_field form.imageUrl style="width: 80%;margin: 0px; outline: none;font-family: arial; color: #2952a3" %}
     </div>
-    <br>
     <div class="form-group floating-label-form-group controls">
       <p><b>Title:</b></p>
       {% render_field form.title placeholder="Title" class="form-control" maxlength="500" %}
